force-app/main/default/objects/Street_Area__c/Street_Area__c.object-meta.xml
<CustomObject>
    <label>Street Area</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Street Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Street Areas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>