force-app/main/default/objects/Street_Area__c/fields/Clientele_MapItem_Id__c.field-meta.xml
<CustomField>
    <fullName>Clientele_MapItem_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clientele_MapItem_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>