force-app/main/default/objects/Street_Area__c/fields/IsMapCountySpecified__c.field-meta.xml
<CustomField>
    <fullName>IsMapCountySpecified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMapCountySpecified</label>
    <type>Checkbox</type>
</CustomField>