force-app/main/default/objects/Street_Area__c/fields/IsMapStateSpecified__c.field-meta.xml
<CustomField>
    <fullName>IsMapStateSpecified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMapStateSpecified</label>
    <type>Checkbox</type>
</CustomField>