force-app/main/default/objects/Street_Area__c/fields/Map_County__c.field-meta.xml
<CustomField>
    <fullName>Map_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map County</label>
    <referenceTo>Map_County__c</referenceTo>
    <relationshipLabel>Street Areas</relationshipLabel>
    <relationshipName>Street_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>